--- a/index.html
+++ b/index.html
@@ -11,8 +11,23 @@
 </head>
 <body>
     <!-- header start -->
-    <header>
-
+    <header class="nav-container">
+        <nav>
+            <div class="topbar">
+                <div class="logo">
+                    <img src="images/icons/logo.png" alt="">
+                    <h2 id="idea">Idea</h2>
+                </div>
+                <div class="menu">
+                    <ul>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Work</a></li>
+                        <li><a href=""><img class="img-class" src="images/icons/profile.png" alt=""></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </header>
     <!-- header end -->
     <main>
